# libgui

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/eventpp/: CMakeLists.txt
examples/: CMakeLists.txt  example_borderless.cpp  example_simple.cpp
include/dv_gui_opengl/: dv_gui_opengl.hpp
include/dv_gui_opengl/dv_gui_opengl/: dv_global_config.hpp  dv_window.hpp
include/dv_gui_opengl/dv_gui_opengl/fonts/: dv_font_fontawesome_solid.hpp
include/dv_gui_opengl/dv_gui_opengl/models/: dv_texture.hpp  dv_version.hpp  dv_window_settings.hpp  dv_window_title_bar.hpp
include/dv_gui_opengl/dv_gui_opengl/systems/: dv_sys_command.hpp
include/dv_gui_opengl/dv_gui_opengl/utilities/: dv_util_debug.hpp  dv_util_dialog.hpp  dv_util_type_traits.hpp
include/libgui/: libgui.hpp
include/libgui/libgui/: backend.hpp  global.hpp  gui_window.hpp  imgui.hpp  imgui_extensions.hpp  theme.hpp  window.hpp
include/libgui/libgui/fonts/: font.hpp  font_fontawesome_solid.hpp  font_source.hpp
include/libgui/libgui/fonts/embedded/: fontawesome_defines.hpp  fontawesome_solid.hpp
include/libgui/libgui/misc/: texture.hpp  version.hpp  work_context.hpp
include/libgui/libgui/models/: gui_command.hpp  gui_taskbar_status.hpp  gui_window_settings.hpp  gui_window_title_bar.hpp  taskbar_status.hpp
include/libgui/libgui/systems/: gui_sys_command.hpp
include/libgui/libgui/utilities/: util_debug.hpp  util_dialog.hpp  util_sound.hpp
libraries/glfw/glfw/: internal.h
libraries/imgui/imgui/: imgui_widgets.cpp
libraries/imgui/imgui/backends/: imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp
libraries/pfd/pfd/: portable-file-dialogs.h
source/: CMakeLists.txt
source/dv_gui_opengl/: dv_window.cpp
source/dv_gui_opengl/models/: dv_command.cpp  dv_texture.cpp  dv_version.cpp
source/dv_gui_opengl/utilities/: dv_util_debug.cpp  dv_util_dialog.cpp  dv_util_sound.cpp
source/libgui/: backend.cpp  gui_window.cpp  imgui_extensions.cpp  libgui.hpp  theme.cpp  window.cpp
source/libgui/libgui/: backend.cpp  backend.hpp  imgui.hpp  imgui_extensions.cpp  imgui_extensions.hpp  runtime.cpp  runtime.hpp  theme.hpp  type_traits.hpp  window.cpp  window.hpp
source/libgui/libgui/debug/: debug.cpp  debug.hpp
source/libgui/libgui/defines/: backend.hpp  env.hpp  libgui.hpp  os.hpp
source/libgui/libgui/defines/backends/: glfw.hpp  opengl2.hpp  opengl3.hpp
source/libgui/libgui/event/: event.hpp  event_system.hpp  events.hpp  events_internal.hpp
source/libgui/libgui/exceptions/: libgui_exception.hpp
source/libgui/libgui/extensions/app/: app.hpp
source/libgui/libgui/extensions/app/app_loop/: app_loop.cpp  app_loop.hpp  timer_callback.hpp
source/libgui/libgui/extensions/app/app_loop/defines/: asio.hpp
source/libgui/libgui/extensions/app/app_loop/internals/: coroutine_cv.cpp  coroutine_cv.hpp  timer_context.hpp
source/libgui/libgui/extensions/imgui/: imgui.hpp
source/libgui/libgui/extensions/imgui/app/internals/contexts/: imgui_backend_context.cpp  imgui_backend_context.hpp  imgui_backend_context_glfw_opengl2.cpp  imgui_backend_context_glfw_opengl2.hpp  imgui_backend_context_glfw_opengl3.cpp  imgui_backend_context_glfw_opengl3.hpp  imgui_context_factory.cpp  imgui_context_factory.hpp
source/libgui/libgui/extensions/imgui/app/window/: imgui_window.cpp  imgui_window.hpp  imgui_window_settings.hpp
source/libgui/libgui/fonts/: font_source.cpp
source/libgui/libgui/fonts/embedded/: fontawesome_regular.hpp  fontawesome_solid.hpp
source/libgui/libgui/internals/: glfw.cpp  glfw.hpp  global.hpp  win32.cpp
source/libgui/libgui/internals/backend/: backend.hpp  backend_glfw_opengl2.cpp  backend_glfw_opengl2.hpp  backend_glfw_opengl3.cpp  backend_glfw_opengl3.hpp  backend_life.cpp  backend_life.hpp
source/libgui/libgui/internals/contexts/: backend_context.cpp  backend_context.hpp  backend_context_glfw.cpp  backend_context_glfw.hpp  backend_context_glfw_opengl2.cpp  backend_context_glfw_opengl2.hpp  backend_context_glfw_opengl3.cpp  backend_context_glfw_opengl3.hpp  context_factory.cpp  context_factory.hpp
source/libgui/libgui/internals/defines/: libgui.hpp  window.hpp
source/libgui/libgui/internals/utilities/: glfw.cpp  win32.cpp  win32.hpp
source/libgui/libgui/internals/window/: window_base.hpp  window_titlebar.hpp
source/libgui/libgui/misc/: result.hpp  sizing.hpp  texture.cpp  version.cpp
source/libgui/libgui/models/: command.hpp  window_settings.hpp  window_title_bar.hpp
source/libgui/libgui/systems/: sys_command.hpp
source/libgui/libgui/utilities/: bit.hpp  string.hpp  util_debug.hpp  util_dialog.cpp
source/libgui/libgui/window/: window.cpp  window.hpp  window_base.cpp  window_base.hpp  window_context.cpp  window_context.hpp  window_settings.hpp  window_taskbar.hpp  window_titlebar.hpp
source/libgui/libgui/window/contexts/: backend_context.cpp  backend_context.hpp  backend_context_opengl2.cpp  backend_context_opengl2.hpp  backend_context_opengl3.cpp  backend_context_opengl3.hpp  context_factory.cpp  context_factory.hpp  windowing_context.cpp  windowing_context.hpp  windowing_context_glfw.cpp  windowing_context_glfw.hpp
source/libgui/misc/: texture.cpp  version.cpp  work_context.cpp
source/libgui/models/: command.cpp  gui_command.cpp
source/libgui/utilities/: util_dialog.cpp  util_sound.cpp
